--- a/index-2.html
+++ b/index-2.html
@@ -385,7 +385,7 @@ color: #2962FF !important;
 
                                 <h3 class="slide-title"><span>MANY YEARS</span> OF WORKING <br/>AND STILL <span>PAYING</span> </h3>
                                 <p>
-                                    <a href="en/indexcca3.html?a=signup" class="slider btn btn-primary">Get Started</a>
+                                    <a href="https://theultimafinancs-dashboard.vercel.app/#/" class="slider btn btn-primary">Get Started</a>
                                 </p>
                             </div>
                         </div>
@@ -727,7 +727,7 @@ color: #2962FF !important;
                                                         <!--</div>-->
                                                     </div>
                                                     <div class="price-table-footer">
-                                                        <a href="en/indexcca3.html?a=signup" class="boxed-btn">GET STARTED</a>
+                                                        <a href="https://theultimafinancs-dashboard.vercel.app/#/" class="boxed-btn">GET STARTED</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -780,7 +780,7 @@ color: #2962FF !important;
                                                         <!--</div>-->
                                                     </div>
                                                     <div class="price-table-footer">
-                                                        <a href="en/indexcca3.html?a=signup" class="boxed-btn">GET STARTED</a>
+                                                        <a href="https://theultimafinancs-dashboard.vercel.app/#/" class="boxed-btn">GET STARTED</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -833,7 +833,7 @@ color: #2962FF !important;
                                                         <!--</div>-->
                                                     </div>
                                                     <div class="price-table-footer">
-                                                        <a href="en/indexcca3.html?a=signup" class="boxed-btn">GET STARTED</a>
+                                                        <a href="https://theultimafinancs-dashboard.vercel.app/#/" class="boxed-btn">GET STARTED</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -886,7 +886,7 @@ color: #2962FF !important;
                                                         <!--</div>-->
                                                     </div>
                                                     <div class="price-table-footer">
-                                                        <a href="en/indexcca3.html?a=signup" class="boxed-btn">GET STARTED</a>
+                                                        <a href="https://theultimafinancs-dashboard.vercel.app/#/" class="boxed-btn">GET STARTED</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -967,7 +967,7 @@ color: #2962FF !important;
     </section>
     <!-- Quote and Chart Section Ends -->
           <!-- Call To Action Button Starts -->
-          <p class="action-btn"><a class="btn btn-primary" href="en/indexcca3.html?a=signup">Get Started</a></p>
+          <p class="action-btn"><a class="btn btn-primary" href="https://theultimafinancs-dashboard.vercel.app/#/">Get Started</a></p>
           <!-- Call To Action Button Ends -->
         </div>
       </div>
