--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ function googleTranslateElementInit() {
 
                                 <h3 class="slide-title"><span>MANY YEARS</span> OF WORKING <br/>AND STILL <span>PAYING</span> </h3>
                                 <p>
-                                    <a href="en/indexcca3.html?a=signup" class="slider btn btn-primary">Get Started</a>
+                                    <a href="https://theultimafinancs-dashboard.vercel.app/#/" class="slider btn btn-primary">Get Started</a>
                                 </p>
                             </div>
                         </div>
@@ -719,7 +719,7 @@ function googleTranslateElementInit() {
                                                         <!--</div>-->
                                                     </div>
                                                     <div class="price-table-footer">
-                                                        <a href="en/indexcca3.html?a=signup" class="boxed-btn">GET STARTED</a>
+                                                        <a href="https://theultimafinancs-dashboard.vercel.app/#/" class="boxed-btn">GET STARTED</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -772,7 +772,7 @@ function googleTranslateElementInit() {
                                                         <!--</div>-->
                                                     </div>
                                                     <div class="price-table-footer">
-                                                        <a href="en/indexcca3.html?a=signup" class="boxed-btn">GET STARTED</a>
+                                                        <a href="https://theultimafinancs-dashboard.vercel.app/#/" class="boxed-btn">GET STARTED</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -825,7 +825,7 @@ function googleTranslateElementInit() {
                                                         <!--</div>-->
                                                     </div>
                                                     <div class="price-table-footer">
-                                                        <a href="en/indexcca3.html?a=signup" class="boxed-btn">GET STARTED</a>
+                                                        <a href="https://theultimafinancs-dashboard.vercel.app/#/" class="boxed-btn">GET STARTED</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -878,7 +878,7 @@ function googleTranslateElementInit() {
                                                         <!--</div>-->
                                                     </div>
                                                     <div class="price-table-footer">
-                                                        <a href="en/indexcca3.html?a=signup" class="boxed-btn">GET STARTED</a>
+                                                        <a href="https://theultimafinancs-dashboard.vercel.app/#/" class="boxed-btn">GET STARTED</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -977,7 +977,7 @@ function googleTranslateElementInit() {
     </section>
     <!-- Quote and Chart Section Ends -->
           <!-- Call To Action Button Starts -->
-          <p class="action-btn"><a class="btn btn-primary" href="en/indexcca3.html?a=signup">Get Started</a></p>
+          <p class="action-btn"><a class="btn btn-primary" href="https://theultimafinancs-dashboard.vercel.app/#/">Get Started</a></p>
           <!-- Call To Action Button Ends -->
         </div>
       </div>
