--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ function googleTranslateElementInit() {
                <div class="col-md-4 ts-padding bg-image-1">
                     <div>
                         <div class="text-center">
-                            <a class="button-video mfp-youtube" href="externalcbb2cbb2cbb2.html?link=https://www.youtube.com/watch?v=GmOzih6I1zs"></a>
+                            <a class="button-video mfp-youtube" href="https://youtu.be/ODjglD53Kro?si=dvO_gXbLXENm8Uy2"></a>
                         </div>
                     </div>
                 </div>
